typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            131,
        ),
        hi: BytePos(
            133,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:13:5
   |
13 | var a1: { fn(): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            155,
        ),
        hi: BytePos(
            157,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:14:5
   |
14 | var b1: { new (): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            182,
        ),
        hi: BytePos(
            184,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:16:5
   |
16 | var a2: { fn(a: number, b: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            226,
        ),
        hi: BytePos(
            228,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:17:5
   |
17 | var b2: { fn(a: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            260,
        ),
        hi: BytePos(
            262,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:19:5
   |
19 | var a3: { fn(a: Base, b: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            302,
        ),
        hi: BytePos(
            304,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:20:5
   |
20 | var b3: { fn(a: Derived, b: Base): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            346,
        ),
        hi: BytePos(
            348,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:22:5
   |
22 | var a4: { fn(): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            370,
        ),
        hi: BytePos(
            372,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:23:5
   |
23 | var b4: { fn(): C };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            392,
        ),
        hi: BytePos(
            394,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:25:5
   |
25 | var a5: { fn(a?: Base): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            424,
        ),
        hi: BytePos(
            426,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:26:5
   |
26 | var b5: { fn(a?: C): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            454,
        ),
        hi: BytePos(
            456,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:28:5
   |
28 | var a6: { fn(...a: Base[]): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            490,
        ),
        hi: BytePos(
            492,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:29:5
   |
29 | var b6: { fn(...a: C[]): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            524,
        ),
        hi: BytePos(
            526,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:31:5
   |
31 | var a7: { fn<T>(t: T): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            552,
        ),
        hi: BytePos(
            554,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnCallSignature.ts:32:5
   |
32 | var b7: { fn<T>(t: T[]): T };
   |     ^^

